# joe-agent-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements.vercel.txt  vercel.json
.github/workflows/: test.yml
agent/: __init__.py  executor.py  memory.py  planner.py  reasoning.py  registry.py  tools.py  workflow.py
agent/prompts/: __init__.py
api/: __init__.py  auth.py  dependencies.py  frontend.py  server.py  websocket.py
api/middleware/: __init__.py
api/routes/: __init__.py  ai.py  chat.py  crawler.py  health.py  search.py  settings.py
api/schemas/: __init__.py
cache/: __init__.py  cache_manager.py  memory_cache.py
cli/: __init__.py  main.py  utils.py
cli/commands/: __init__.py  analyze.py  ask.py  chat.py  code.py  config.py  crawl.py  health.py  models.py  scrape.py  search.py  summarize.py  version.py
config/: __init__.py  models.json  openrouter.json  settings.py
crawler/: __init__.py  browser.py  cleaner.py  extractor.py  fetcher.py  markdown.py  parser.py  robots.py  sitemap.py
database/: __init__.py  chroma.py  postgres.py  redis.py  sqlite.py
docs/: api.md  architecture.md  cli.md  deployment.md  developer.md
frontend/: index.html
frontend/templates/: about.html  base.html  chat.html  docs.html  home.html
llm/: __init__.py  client.py  models.py  prompts.py  router.py  tokenizer.py
llm/providers/: __init__.py  fallback.py  openrouter.py
logger/: __init__.py  logger.py
monitoring/: __init__.py  health.py  metrics.py  tracing.py
rag/: __init__.py  chunker.py  embedding.py  generator.py  retriever.py  vector_store.py
scheduler/: __init__.py  jobs.py
scripts/: deploy.sh  install.sh  run.sh  test.sh
security/: __init__.py  jwt.py  rate_limit.py
tests/: conftest.py
tests/unit/: test_agent.py  test_cli.py  test_llm.py
