[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joe-agent-platform"
version = "0.1.0"
description = "AI Agent Platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Joe Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]